--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "emoji-picker-react": "^4.5.7",
+    "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
     "react": "^18",
