--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
