--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "emoji-picker-react": "^4.5.7",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
+    "nanoid": "^5.0.3",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18",
