--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.5.7",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
